# joplin_viewer2

./: app.py  pyproject.toml  requirements.txt
templates/: note.html
